Update OpenStack CSI to the latest patch releases
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/addons/csi-openstack-cinder/snapshot-controller.yaml
+++ b/addons/csi-openstack-cinder/snapshot-controller.yaml
@@ -30,7 +30,7 @@ spec:
       labels:
         app: snapshot-controller
     spec:
-      serviceAccount: snapshot-controller
+      serviceAccountName: snapshot-controller
       containers:
         - name: snapshot-controller
           image: {{ .InternalImages.Get "OpenstackCSISnapshotController" }}
