--- a/addons/csi-openstack-cinder/snapshot-webhook.yaml
+++ b/addons/csi-openstack-cinder/snapshot-webhook.yaml
@@ -54,6 +54,15 @@ spec:
         app: snapshot-validation
     spec:
       serviceAccountName: snapshot-webhook
+      nodeSelector:
+        node-role.kubernetes.io/control-plane: ""
+      tolerations:
+      - key: node-role.kubernetes.io/control-plane
+        effect: NoSchedule
+        operator: Exists
+      - key: node-role.kubernetes.io/master
+        effect: NoSchedule
+        operator: Exists
       containers:
       - name: snapshot-validation
         image: {{ .InternalImages.Get "OpenstackCSISnapshotWebhook" }}
