Add E2E tests for CentOS 7 on vSphere
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/tests.yml
+++ b/test/tests.yml
@@ -20,6 +20,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_containerd
@@ -44,6 +45,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_containerd
@@ -68,6 +70,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_containerd
@@ -92,6 +95,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_docker
@@ -115,6 +119,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_docker
@@ -138,6 +143,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd
@@ -162,6 +168,7 @@
     - name: openstack_rhel_stable
     - name: openstack_flatcar_stable
     - name: vsphere_default_stable
+    - name: vsphere_centos_stable
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd
@@ -186,6 +193,7 @@
     - name: openstack_rhel_stable
     - name: openstack_flatcar_stable
     - name: vsphere_default_stable
+    - name: vsphere_centos_stable
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd
@@ -210,6 +218,7 @@
     - name: openstack_rhel_stable
     - name: openstack_flatcar_stable
     - name: vsphere_default_stable
+    - name: vsphere_centos_stable
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_docker
@@ -234,6 +243,7 @@
     - name: openstack_rhel_stable
     - name: openstack_flatcar_stable
     - name: vsphere_default_stable
+    - name: vsphere_centos_stable
     - name: vsphere_flatcar_stable
 
 - scenario: calico_containerd
@@ -257,6 +267,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: calico_docker
@@ -280,6 +291,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: weave_containerd
@@ -303,6 +315,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: weave_docker
@@ -326,6 +339,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: cilium_containerd
@@ -349,6 +363,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: cilium_docker
@@ -372,6 +387,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: conformance_containerd
@@ -440,6 +456,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd
@@ -463,6 +480,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd
@@ -486,6 +504,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd
@@ -509,6 +528,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_docker
@@ -532,6 +552,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_docker
@@ -555,6 +576,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: csi_ccm_migration
@@ -572,6 +594,7 @@
     - name: azure_rhel
     - name: azure_rockylinux
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: csi_ccm_migration
@@ -589,6 +612,7 @@
     - name: azure_rhel
     - name: azure_rockylinux
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: csi_ccm_migration
@@ -606,6 +630,7 @@
     - name: azure_rhel
     - name: azure_rockylinux
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: csi_ccm_migration
@@ -623,6 +648,7 @@
     - name: azure_rhel
     - name: azure_rockylinux
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
@@ -655,6 +681,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
@@ -687,6 +714,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
@@ -719,6 +747,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
@@ -751,6 +780,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_docker_external
@@ -783,6 +813,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: install_docker_external
@@ -815,6 +846,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd_external
@@ -848,6 +880,7 @@
     - name: openstack_rhel_stable
     - name: openstack_flatcar_stable
     - name: vsphere_default_stable
+    - name: vsphere_centos_stable
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd_external
@@ -881,6 +914,7 @@
     - name: openstack_rhel_stable
     - name: openstack_flatcar_stable
     - name: vsphere_default_stable
+    - name: vsphere_centos_stable
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd_external
@@ -914,6 +948,7 @@
     - name: openstack_rhel_stable
     - name: openstack_flatcar_stable
     - name: vsphere_default_stable
+    - name: vsphere_centos_stable
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_docker_external
@@ -947,6 +982,7 @@
     - name: openstack_rhel_stable
     - name: openstack_flatcar_stable
     - name: vsphere_default_stable
+    - name: vsphere_centos_stable
     - name: vsphere_flatcar_stable
 
 - scenario: legacy_machine_controller_containerd_external
@@ -979,6 +1015,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
@@ -1011,6 +1048,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
@@ -1043,6 +1081,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
@@ -1075,6 +1114,7 @@
     - name: openstack_rhel
     - name: openstack_flatcar
     - name: vsphere_default
+    - name: vsphere_centos
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_docker_external
